provisioning/stream/kubernetes/templates/storage-coordinator/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stream-storage-coordinator
  namespace: $NAMESPACE
  labels:
    app: stream-storage-coordinator
    releaseId: $RELEASE_ID
spec:
  replicas: $STREAM_STORAGE_COORDINATOR_REPLICAS
  selector:
    matchLabels:
      app: stream-storage-coordinator
  template:
    metadata:
      labels:
        app: stream-storage-coordinator
        releaseId: $RELEASE_ID
        stream-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "stream"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/stream-storage-coordinator.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9000/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: stream-storage-coordinator
          image: $STREAM_IMAGE_REPOSITORY:$STREAM_IMAGE_TAG
          command: [ "/app/service" ]
          args: [ "--config-file", "/stream/config/config.yaml", "storage-coordinator" ] # run storage coordinator component
          resources:
            requests:
              cpu: "$STREAM_STORAGE_COORDINATOR_CPU_SOFT_LIMIT"
              memory: "$STREAM_STORAGE_COORDINATOR_MEMORY_SOFT_LIMIT" # also GOMEMLIMIT soft limit
            limits:
              memory: "$STREAM_STORAGE_COORDINATOR_MEMORY_HARD_LIMIT"
          ports:
            - containerPort: 9000 # metrics
          volumeMounts:
            - name: config
              mountPath: /stream/config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: stream-config
            items:
              - key: config.yaml
                path: config.yaml
      nodeSelector:
        nodepool: main
