provisioning/stream/kubernetes/templates/storage-coordinator/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stream-storage-coordinator
  namespace: $NAMESPACE
  labels:
    app: stream-storage-coordinator
    releaseId: $RELEASE_ID
spec:
  podSelector:
    matchLabels:
      app: stream-storage-coordinator
  policyTypes:
    - Ingress
  ingress:
    # Metrics
    - ports:
        - port: 9000
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: datadog
          podSelector:
            matchLabels:
              app: datadog-agent
